--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,11 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="black">#000000</color>
+    <color name="grey_bck">#585555</color>
+    <color name="green_bck">#26751A</color>
+    <color name="white">#FFFFFF</color>
+    <color name="orange">#CA6725</color>
+    <color name="cyan">#26A9DB</color>
+    <color name="green">#1FDB0A</color>
 
 </resources>
