--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="default_horizontal_margin">16dp</dimen>
     <dimen name="default_vertical_margin">16dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
+    <dimen name="button_text_size">24sp</dimen>
+    <dimen name="button_width">160dp</dimen>
+    <dimen name="match_contrains">0dp</dimen>
 
 </resources>
