--- a/app/src/main/res/layout/fragment_order_ticket.xml
+++ b/app/src/main/res/layout/fragment_order_ticket.xml
@@ -102,6 +102,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/price_container">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@{ viewModel.spread }"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                tools:text="1.00" />
+
             <RelativeLayout
                 android:id="@+id/units_container"
                 android:layout_width="@dimen/match_contrains"
