--- a/app/src/main/res/layout/fragment_order_ticket.xml
+++ b/app/src/main/res/layout/fragment_order_ticket.xml
@@ -92,6 +92,19 @@
                 tools:text="@string/no_data" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/spread"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@{ viewModel.spread }"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/price_container"
+            tools:text="1.00" />
+
         <LinearLayout
             android:id="@+id/user_input_container"
             android:layout_width="match_parent"
@@ -100,16 +113,7 @@
             android:weightSum="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/price_container">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@{ viewModel.spread }"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                tools:text="1.00" />
+            app:layout_constraintTop_toBottomOf="@id/spread">
 
             <RelativeLayout
                 android:id="@+id/units_container"
@@ -140,6 +144,7 @@
                     android:layout_marginTop="@dimen/small_margin"
                     android:layout_marginEnd="@dimen/default_vertical_margin"
                     android:layout_marginBottom="@dimen/default_vertical_margin"
+                    android:inputType="numberDecimal"
                     android:background="@drawable/rounded_edit_text_bck"
                     android:gravity="center"
                     android:textColor="@color/white"
@@ -176,6 +181,7 @@
                     android:layout_marginTop="@dimen/small_margin"
                     android:layout_marginEnd="@dimen/default_vertical_margin"
                     android:layout_marginBottom="@dimen/default_vertical_margin"
+                    android:inputType="number"
                     android:background="@drawable/rounded_edit_text_bck"
                     android:gravity="center"
                     android:textColor="@color/white"
@@ -200,6 +206,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/confirm_button"
+            android:enabled="@{ viewModel.confirmAvailable }"
             android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_horizontal_margin"
